<resources>
  <string name="app_name">Réveil Planningo</string>
  <string name="main_title">Réveil Planningo</string>
  <string name="main_subtitle">Importez un plan d\'alarmes depuis Planningo.</string>
  <string name="main_note">Sonnerie conforme aux réglages système (DND/silencieux).</string>
  <string name="status_waiting">En attente d\'import.</string>
  <string name="active_alarm_count_value">Alarmes actives : %1$d</string>
  <string name="active_alarm_count_with_total">Alarmes actives : %1$d / %2$d importées</string>
  <string name="btn_check_permission">Autorisation alarmes exactes</string>
  <string name="btn_open_settings">Ouvrir paramètres</string>
  <string name="btn_choose_ringtone">Choisir la sonnerie</string>
  <string name="ringtone_picker_title">Choisir la sonnerie du réveil</string>
  <string name="ringtone_default_label">Sonnerie d\'alarme système</string>
  <string name="ringtone_current_value">Sonnerie actuelle : %1$s</string>
  <string name="alarm_title">Réveil</string>
  <string name="alarm_stop">Arrêter</string>
  <string name="alarm_snooze">Répéter 10 min</string>
  <string name="alarm_service">Service</string>
</resources>
